--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.9.22"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
