--- a/part1/package.json
+++ b/part1/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "part1",
+  "name": "notes",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "axios": "^0.19.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "@testing-library/react": "^9.4.0",
+    "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.19.1",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-scripts": "3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,6 +34,7 @@
     ]
   },
   "devDependencies": {
-    "json-server": "^0.16.1"
-  }
+    "json-server": "^0.15.1"
+  },
+  "proxy": "http://localhost:3001"
 }
